# anki-backup-tool

./: .gitignore  CODEX_IMPLEMENTATION_INSTRUCTIONS.md  Cargo.toml  Dockerfile  PROGRESS_LOG.md  README.md  config.example.toml
.github/workflows/: ci.yml  docker.yml
chart/anki-backup-tool/: Chart.yaml  values.yaml
chart/anki-backup-tool/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
crates/core/: Cargo.toml
crates/core/src/: backup.rs  hash.rs  lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: config.rs  lib.rs  main.rs  server.rs
crates/daemon/templates/: detail.html  index.html
crates/daemon/tests/: integration.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  postgres_store.rs  repository.rs  sqlite_store.rs  store.rs
crates/sync/: Cargo.toml
crates/sync/src/: lib.rs
crates/sync/tests/: live_sync.rs
docs/: ARCHITECTURE.md  OPERATIONS.md  ROLLBACK.md
packaging/systemd/: anki-backup-tool.service
