[workspace]
members = [
  "crates/core",
  "crates/storage",
  "crates/daemon",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["anki-backup-tool contributors"]

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde", "clock"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
