[workspace]
members = [
  "crates/core",
  "crates/storage",
  "crates/sync",
  "crates/daemon",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["anki-backup-tool contributors"]

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "net", "signal", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
thiserror = "2.0"
tar = "0.4"
tempfile = "3.19"
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }
toml = "0.8"
zstd = "0.13"
