[package]
name = "anki-backup-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anki-backup-core = { path = "../core" }
anki-backup-storage = { path = "../storage" }
anki-backup-sync = { path = "../sync" }
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
askama.workspace = true
askama_web.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
