[package]
name = "anki-backup-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anki-backup-core = { path = "../core" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.19"
